feat: Integração com a API envio de e-mails
Creio que deva ser criado um token de acesso para que o usuário possa se cadastrar, porque o envio dos e-mails está sendo com base no meu e-mail.