@@ -14,12 +14,7 @@ public class FormEasyProjectApplication {
 	public static void main(String[] args) {
 		// Adiciona-se o Application a fim de passar o controle para o JavaFX
 		Application.launch(FormEasyProjectApplicationJavaFX.class, args);
+		
 	}
 
 }
-
-/* 
- * java --module-path "C:\Program Files\Java\javafx-sdk-22.0.2\lib" 
- * --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.web 
- * -jar formeasyproject02.jar
- */
